categoria things readyyy

--- a/pages-user/things.html
+++ b/pages-user/things.html
@@ -30,6 +30,7 @@
         <div class="barra">
             <h2>Things</h2>
         </div>
+        <a href="../pages-products/things/ZonaFitness.html">
         <div class="opciones">
             <img src="../img/things/saco-boxeo.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
             <p>
@@ -42,6 +43,8 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
+        </a>
+        <a href="../pages-products/things/BioInnova.html">
         <div class="opciones">
             <img src="../img/things/bioinnova.jpeg" alt="monster-burritos" width="260" height="150">
             <p>
@@ -54,6 +57,8 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
+        </a>
+        <a href="../pages-products/things/SuperClean.html">
         <div class="opciones">
             <img src="../img/things/super-clean.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
             <p>
@@ -66,6 +71,8 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
+        </a>
+        <a href="../pages-products/things/VidLab.html">
         <div class="opciones">
             <img src="../img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150">
             <p>
@@ -78,6 +85,8 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
+        </a>
+        <a href="../pages-products/things/BioInnova2.html">
         <div class="opciones">
             <img src="../img/things/bioinnova-silla.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
             <p>
@@ -90,6 +99,8 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
+        </a>
+        <a href="../pages-products/things/SuperClean2.html">
         <div class="opciones">
             <img src="../img/things/cleaning-power.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
             <p>
@@ -102,6 +113,7 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
+        </a>
 
 
     </section>
