--- a/vendedor/index.html
+++ b/vendedor/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../index.css">
-    <link rel="stylesheet" href="css/categorias.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="../img/cupon-estrella.png" type="image/x-icon">
 
@@ -22,6 +21,12 @@
             </ul>
         </nav>
     </header>
+    <section id="body-container">
+        <div class="barra" style="width: 80%;">
+            <h2>Mis Productos</h2>
+        </div>
+    </section>
+
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
