--- a/admin/crearCuentaVendedor.html
+++ b/admin/crearCuentaVendedor.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="css/categorias.css">
-    <link rel="stylesheet" href="css/logIn.css">
-    <link rel="stylesheet" href="css/formulario.css">
+    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../css/categorias.css">
+    <link rel="stylesheet" href="../css/logIn.css">
+    <link rel="stylesheet" href="../css/formulario.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="img/cupon-estrella.png" type="image/x-icon">
 
@@ -34,4 +34,8 @@
         </div>
     </div>
 </body>
+
+<footer>
+    <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
+</footer>
 </html>
