--- a/pages-products/things/BioInnova.html
+++ b/pages-products/things/BioInnova.html
@@ -33,7 +33,7 @@
                     <img src="../../img/logos-empresas/bioinnova.png" alt="Zona Fitness" id="miniatura">
                     <p>
                         <h3>¡Comodidad y Calidad al Mejor Precio!</h3> 
-                        Aprovecha nuestra promoción exclusiva y lleva a casa una mesa plegable de 1.8 metros, fabricada con polietileno de alta calidad. ¡Ideal para el hogar o el trabajo, todo por solo $89.99 en lugar de $150.00!
+                        Aprovecha nuestra promoción exclusiva y lleva a casa una mesa plegable de 1.8 metros, fabricada con polietileno de alta calidad. 
                     </p>
                 </div>
                 <div class="price">
