--- a/pages-products/things/SuperClean.html
+++ b/pages-products/things/SuperClean.html
@@ -33,7 +33,7 @@
                     <img src="../../img/logos-empresas/super-clean.jpeg" alt="Super Clean" id="miniatura">
                     <p>
                         <h3>¡Limpieza Profunda y Frescura Garantizada!</h3> 
-                        Aprovecha nuestra increíble promoción y lleva a cabo una limpieza y desodorización completa de tu sala, más el aspirado y vaporizado de tu juego de comedor de 4 sillas. ¡Todo por solo $49.99 en lugar de $80.00!
+                        Aprovecha nuestra increíble promoción y lleva a cabo una limpieza y desodorización completa de tu sala, más el aspirado y vaporizado de tu juego de comedor de 4 sillas. 
                     </p>
                 </div>
                 </div>
