--- a/pages-products/things/VidLab.html
+++ b/pages-products/things/VidLab.html
@@ -33,7 +33,7 @@
                     <img src="../../img/logos-empresas/vid-lab.jpeg" alt="Ultra-Group" id="miniatura">
                     <p>
                         <h3>¡Obtén Respuestas Rápidas con Nuestra Prueba de ADN!</h3> 
-                        Aprovecha nuestra promoción exclusiva de prueba de paternidad ADN. ¡Obtén resultados rápidos y garantizados por solo $69.99 en lugar de $125.00 y asegúrate de conocer la verdad con los mejores servicios de análisis genético!
+                        Aprovecha nuestra promoción exclusiva de prueba de paternidad ADN. ¡Obtén resultados rápidos y garantizados!
                     </p>
                 </div>
                 <div class="price">
