--- a/pages-products/things/ZonaFitness.html
+++ b/pages-products/things/ZonaFitness.html
@@ -33,7 +33,7 @@
                     <img src="../../img/logos-empresas/zona-fitness.png" alt="Zona Fitness" id="miniatura">
                     <p>
                         <h3>¡Transforma Tu Cuerpo con Zona Fitness!</h3> 
-                        Aprovecha nuestra increíble oferta que incluye un saco de boxeo + acceso a Aflex Fitness + una guía de entrenamiento especializada para marcar y tonificar tus abdominales. ¡Todo por solo $129.99 en lugar de $200.00! 
+                        Aprovecha nuestra increíble oferta que incluye un saco de boxeo + acceso a Aflex Fitness + una guía de entrenamiento especializada para marcar y tonificar tus abdominales. 
                     </p>
                 </div>
                 <div class="price">
