--- a/pages-products/belleza/adara.html
+++ b/pages-products/belleza/adara.html
@@ -92,6 +92,7 @@
             </ul>
         </section>
     </section>
+    <script src="../../js/comprar.js" type="module"></script>
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
