--- a/admin/crearCuentaVendedor.html
+++ b/admin/crearCuentaVendedor.html
@@ -13,6 +13,16 @@
     <title>CupónMania</title>
 </head>
 <body>
+    <header id="header-container">
+        <a href="index.html"><img src="../img/CM-Logo.png" alt="Logo-CM" id="logo"></a>
+        <nav id="pages">
+            <ul>
+                <li><button><a href="crearCuentaVendedor.html"><i class="fa-solid fa-user-plus"></i><h2>Crear Vendedor</h2></a></button></li>
+                <li><button><a href="../LogIn.html"><i class="fa-solid fa-right-from-bracket"></i><h2>Cerrar sesion</h2></a></button></li>
+            </ul>
+        </nav>
+    </header>
+
     <div class="form-container" style="width: 100%;">
         <img src="img/CM.png" alt="" class="logo-CM">
         <div class="formulario">
