--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <li><button><a href="pages-user/things.html"><i class="fa-solid fa-gift" id="icons"></i><h2>Things</h2></a></button></li>
                 <li><button><a href="pages-user/comofunciona.html"><i class="fa-solid fa-circle-info" id="icons"></i><h2>¿Cómo funciona?</h2></a></button></li>
                 <li><button><a href="pages-user/nosotros.html"><i class="fa-solid fa-users" id="icons"></i><h2>Nosotros</h2></a></button></li>
-                <li><button><a href="pages-user/formulario.html"><i class="fa-solid fa-user" id="icons"></i><h2>Registrarse</h2></a></button></li>
+                <li><button><a href="pages-user/perfil.html"><i class="fa-solid fa-user" id="icons"></i><h2>Mi Perfil</h2></a></button></li>
+                <li><button><a href="LogIn.html"><i class="fa-solid fa-right-from-bracket"></i><h2>Cerrar sesion</h2></a></button></li>
             </ul>
         </nav>
     </header>
