--- a/pages-user/perfil.html
+++ b/pages-user/perfil.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../index.css">
-    <link rel="stylesheet" href="../css/categorias.css">
+    <link rel="stylesheet" href="../css/nosotros.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="../img/cupon-estrella.png" type="image/x-icon">
-    <title>Viajes</title>
+    <title>Nosotros</title>
 </head>
 <body>
     <header id="header-container">
@@ -27,41 +27,8 @@
         </nav>
     </header>
 
-    <section id="body-container">
-        <div class="barra">
-            <h2>Viajes</h2>
-        </div>
-        <a href="../pages-products/viajes/paintPark.html">
-        <div class="opciones">
-            <img src="../img/viajes/parque.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
-            <p>
-                <div class="info-cupon">
-                    <img src="../img/logos-empresas/paint-park.jpeg" alt="">
-                    <p>Paquete de 5 personas</p>
-                </div>
-                <h3>$30</h3>
-                <h4>40% off | Antes $50</h4>
-                <h5>Finaliza en: <span id="bold">5 días</span></h5>
-            </p>
-        </div>
-        </a>
-        <a href="../pages-products/viajes/posadaCielo.html">
-        <div class="opciones">
-            <img src="../img/viajes/la-posada-del-cielo.jpeg" alt="monster-burritos" width="260" height="150">
-            <p>
-                <div class="info-cupon">
-                    <img src="../img/logos-empresas/posada-del-cielo.jpeg" alt="">
-                    <p>Estadia de 1 noche para 4 personas en Miramundo y más en Hotel Posada del Cielo</p>
-                </div>
-                <h3>$27</h3>
-                <h4>58% off | Antes $65</h4>
-                <h5>Finaliza en: <span id="bold">5 días</span></h5>
-            </p>
-        </div>
-        </a>
-    </section>
-
-
+    
+    
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
