astride hace esto

--- a/pages-products/belleza/adara.html
+++ b/pages-products/belleza/adara.html
@@ -35,10 +35,10 @@
                     <p>¡Escapate del Estrés: Masaje Relajante con Masaje Ecológico y Digitopresión, más exfoliación</p>
                 </div>
                 <div class="price">
-                    <h3>$20</h3>
+                    <h3 id="precio">$20</h3>
                     <h4>60% off | Antes $50</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
-                    <button class="comprar">Comprar</button>
+                    <button class="comprar" id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
                 </div>
             </article>
             <article>
@@ -92,7 +92,7 @@
             </ul>
         </section>
     </section>
-    <script src="../../js/comprar.js" type="module"></script>
+    <script src="../../js/precio.js" type="module"></script>
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
