--- a/pages-products/belleza/color-unas.html
+++ b/pages-products/belleza/color-unas.html
@@ -39,7 +39,7 @@
                     <h3>$14.99</h3>
                     <h4>35% off | Antes $22.99</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
-                    <button class="comprar">Comprar</button>
+                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
                 </div>
             </article>
             <article>
