--- a/pages-products/belleza/cejas-pestanias.html
+++ b/pages-products/belleza/cejas-pestanias.html
@@ -38,7 +38,7 @@
                     <h3>$10</h3>
                     <h4>62% off | Antes $26.25</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
-                    <button class="comprar">Comprar</button>
+                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
                 </div>
             </article>
             <article>
