--- a/pages-products/belleza/misterBro.html
+++ b/pages-products/belleza/misterBro.html
@@ -38,7 +38,7 @@
                     <h3>$26</h3>
                     <h4>28% off | Antes $36</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
-                    <button class="comprar">Comprar</button>
+                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
                 </div>
             </article>
             <article>
