--- a/pages-products/things/SuperClean.html
+++ b/pages-products/things/SuperClean.html
@@ -41,7 +41,7 @@
                     <h3>$35</h3>
                     <h4>42% off | Antes $60</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                    <button class="comprar">Comprar</button>
+                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
                 </div>
             </article>
             <article>
