--- a/pages-products/Salud/ClinicaInficon.html
+++ b/pages-products/Salud/ClinicaInficon.html
@@ -41,7 +41,7 @@
                     <h3>$17.99</h3>
                     <h4>55% off | Antes $40</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                    <button class="comprar">Comprar</button>
+                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
                 </div>
             </article>
             <article>
