--- a/pages-products/comida/finesterre.html
+++ b/pages-products/comida/finesterre.html
@@ -37,7 +37,7 @@
                     <h3>$18</h3>
                     <h4>49% off | Antes $35</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
-                    <button class="comprar">Comprar</button>
+                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
                 </div>
             </article>
             <article>
