--- a/pages-products/things/SuperClean2.html
+++ b/pages-products/things/SuperClean2.html
@@ -43,7 +43,7 @@
                     <h3>$23</h3>
                     <h4>54% off | Antes $50</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                    <button class="comprar">Comprar</button>
+                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
                 </div>
             </article>
             <article>
