--- a/pages-products/things/ZonaFitness.html
+++ b/pages-products/things/ZonaFitness.html
@@ -40,7 +40,7 @@
                     <h3>$85</h3>
                     <h4>54% off | Antes $184</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                    <button class="comprar">Comprar</button>
+                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
                 </div>
             </article>
             <article>
