--- a/pages-products/things/BioInnova.html
+++ b/pages-products/things/BioInnova.html
@@ -81,7 +81,7 @@
             </ul>
         </section>        
     </section>
-
+    <script src="../../js/precio.js" type="module"></script>
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
