--- a/pages-products/things/SuperClean.html
+++ b/pages-products/things/SuperClean.html
@@ -72,7 +72,7 @@
             <p>Nuestros servicios de limpieza y desodorización ayudan a eliminar la suciedad profunda, los malos olores y las manchas, creando un ambiente más saludable y agradable para ti y tu familia. Además, el vaporizado de tus muebles contribuye a una mayor duración de tus piezas y mejora la calidad del aire en tu hogar.</p>
         </section>       
     </section>
-
+    <script src="../../js/precio.js" type="module"></script>
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
