--- a/pages-products/viajes/posadaCielo.html
+++ b/pages-products/viajes/posadaCielo.html
@@ -76,7 +76,7 @@
             </section>
             
     </section>
-
+    <script src="../../js/precio.js" type="module"></script>
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
