--- a/pages-products/belleza/adara.html
+++ b/pages-products/belleza/adara.html
@@ -38,7 +38,7 @@
                     <h3 id="precio">$20</h3>
                     <h4>60% off | Antes $50</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
-                    <button class="comprar" id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
+                    <button class="comprar" id="comprarBtn">Comprar</button>
                 </div>
             </article>
             <article>
