--- a/pages-products/belleza/barbotas.html
+++ b/pages-products/belleza/barbotas.html
@@ -34,10 +34,10 @@
                     <p>¡Cabello, barba y rostro perfectos! Super paquete de promoción. Con corte de cabello + corte de barba + facial de limpieza</p>
                 </div>
                 <div class="price">
-                    <h3>$30</h3>
+                    <h3 id="precio">$30</h3>
                     <h4>25% off | Antes $40</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
-                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
+                    <button class="comprar" id="comprarBtn">Comprar</button>
                 </div>
             </article>
             <article>
