--- a/pages-products/comida/bodega del cerdito.html
+++ b/pages-products/comida/bodega del cerdito.html
@@ -34,10 +34,10 @@
                     <p>Paga $15.00 en lugar de $20. Consumo de alimentos en todo el menú.</p>
                 </div>
                 <div class="price">
-                    <h3>$15</h3>
+                    <h3 id="precio">$15</h3>
                     <h4>25% off | Antes $20</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
-                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
+                    <button class="comprar"id="comprarBtn">Comprar</button>
                 </div>
             </article>
             <article>
