--- a/pages-products/comida/hijos-del-chilaquil.html
+++ b/pages-products/comida/hijos-del-chilaquil.html
@@ -34,10 +34,10 @@
                 <p>Combo Hijastros de 4 tacos + Chilaquiles + Torta o Burrito + 2 bebidas por $15.00</p>
                 </div>
                 <div class="price">
-                    <h3>$15</h3>
+                    <h3 id="precio">$15</h3>
                     <h4>38% off | Antes $24</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
-                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
+                    <button class="comprar"id="comprarBtn">Comprar</button>
                 </div>
             </article>
             <article>
