--- a/pages-products/belleza/misterBro.html
+++ b/pages-products/belleza/misterBro.html
@@ -35,10 +35,10 @@
                     <p>Paquete Corte de cabello + Corte de Barba + Pedicure Spa Paga</p>
                 </div>
                 <div class="price">
-                    <h3>$26</h3>
+                    <h3 id="precio">$26</h3>
                     <h4>28% off | Antes $36</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
-                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
+                    <button class="comprar"id="comprarBtn">Comprar</button>
                 </div>
             </article>
             <article>
