--- a/pages-products/belleza/renacer.html
+++ b/pages-products/belleza/renacer.html
@@ -35,10 +35,10 @@
                     <p>¡Tu escape perfecto, masajes relajantes en un ambiente de paz y bienestar</p>
                 </div>
                 <div class="price">
-                    <h3>$22</h3>
+                    <h3 id="precio">$22</h3>
                     <h4>76% off | Antes $90</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
-                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
+                    <button class="comprar"id="comprarBtn">Comprar</button>
                 </div>
             </article>
             <article>
