--- a/pages-products/things/SuperClean.html
+++ b/pages-products/things/SuperClean.html
@@ -38,10 +38,10 @@
                 </div>
                 </div>
                 <div class="price">
-                    <h3>$35</h3>
+                    <h3 id="precio">$35</h3>
                     <h4>42% off | Antes $60</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
+                    <button id="comprar"id="comprarBtn">Comprar</button>
                 </div>
             </article>
             <article>
