--- a/pages-products/viajes/posadaCielo.html
+++ b/pages-products/viajes/posadaCielo.html
@@ -35,10 +35,10 @@
                     <p>Disfruta de un retiro en la montaña más alta de El Salvador. Nuestro paquete incluye alojamiento para cuatro personas, una deliciosa sopa de gallina india y una caminata guiada por áreas ecológicas. ¡Descansa en un clima fresco, rodeado de paisajes naturales inolvidables!</p>
                 </div>                
                 <div class="price">
-                    <h3>$30</h3>
+                    <h3 id="precio">$30</h3>
                     <h4>25% off | Antes $40</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
-                    <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
+                    <button class="comprar"id="comprarBtn">Comprar</button>
                 </div>
             </article>
             <article>
