--- a/pages-products/comida/burritos-university.html
+++ b/pages-products/comida/burritos-university.html
@@ -34,7 +34,7 @@
                     <p>Banquete Mexicano: Elige entre 2 tortas o 2 burritos + 8 tacos + chile toreado + Cebolla asada + 2 bebidas</p>
                 </div>
                 <div class="price">
-                    <h3>$13.99</h3>
+                    <h3 id="precio">$13.99</h3>
                     <h4>42% off | Antes $23.99</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
                     <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
