--- a/pages-products/comida/finesterre.html
+++ b/pages-products/comida/finesterre.html
@@ -34,7 +34,7 @@
                     <p>¡Paella Mixta para 5 personas hasta tu casa! (Camarones, Calamar, Cangrejo, Almejas, Costilla, Carne y Pollo)</p>
                 </div>
                 <div class="price">
-                    <h3>$18</h3>
+                    <h3 id="precio">$18</h3>
                     <h4>49% off | Antes $35</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
                     <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
