--- a/pages-products/comida/las-trajineras.html
+++ b/pages-products/comida/las-trajineras.html
@@ -34,7 +34,7 @@
                     <p>¡Súper Taquiza Trajinera!</p>
                 </div>
                 <div class="price">
-                    <h3>$12</h3>
+                    <h3 id="precio">$12</h3>
                     <h4>48% off | Antes $22.95</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
                     <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
