--- a/pages-products/things/BioInnova.html
+++ b/pages-products/things/BioInnova.html
@@ -37,7 +37,7 @@
                     </p>
                 </div>
                 <div class="price">
-                    <h3>$50</h3>
+                    <h3id="precio">$50</h3>
                     <h4>38% off | Antes $80</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
                     <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
