--- a/pages-products/belleza/cejas-pestanias.html
+++ b/pages-products/belleza/cejas-pestanias.html
@@ -35,7 +35,7 @@
                     <p>Realza tu Mirada: Lifting de Pestañas Profesional</p>
                 </div>
                 <div class="price">
-                    <h3>$10</h3>
+                    <h3 id="precio">$10</h3>
                     <h4>62% off | Antes $26.25</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
                     <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
