--- a/pages-products/things/SuperClean2.html
+++ b/pages-products/things/SuperClean2.html
@@ -40,7 +40,7 @@
                 </div>
                 </div>
                 <div class="price">
-                    <h3>$23</h3>
+                    <h3 id="precio">$23</h3>
                     <h4>54% off | Antes $50</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
                     <button class="comprar"id="comprarBtn"><a href="../../pagar.html">Comprar</a></button>
