--- a/pagar.html
+++ b/pagar.html
@@ -81,4 +81,7 @@
     </script>
     
 </body>
+<footer>
+    <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
+</footer>
 </html>
