--- a/pages-user/comofunciona.html
+++ b/pages-user/comofunciona.html
@@ -34,8 +34,8 @@
                 <ul>
                     <li>
                         <p>
-                            El primer paso para poder disfrutar de los múltiples beneficios que ofrece nuestro maravilloso sitio es: <a href="formulario.html">Iniciar Sesión</a>, 
-                            sino posees una cuenta, <a href="cuenta_nueva.html">Regístrate.</a>
+                            El primer paso para poder disfrutar de los múltiples beneficios que ofrece nuestro maravilloso sitio es: Iniciar Sesión, 
+                            sino posees una cuenta,Regístrate.
                         </p>
                     </li>
                     <li>
