--- a/admin/crearCuentaVendedor.html
+++ b/admin/crearCuentaVendedor.html
@@ -30,21 +30,21 @@
                 <h2>Perfil Vendedor</h2>
             </div>
             <div class="logIn">
-                <form id="loginForm">
+                <form id="registerForm">
                     <ul>
-                        <li><span class="inicio"><i class="fa-solid fa-user"></i></span><input id="loginEmail" type="text" required class="text" placeholder="Nombre de la Tienda"></li>
+                        <li><span class="inicio"><i class="fa-solid fa-user"></i></span><input id="storeName" type="text" required class="text" placeholder="Nombre de la Tienda"></li>
                         <li><span class="inicio"><i class="fa-solid fa-house"></i></span><input id="loginDireccion" type="text" required class="text" placeholder="Dirección"></li>
                         <li><span class="inicio"><i class="fa-solid fa-phone"></i></span><input id="loginTelefono" type="number" required class="text" placeholder="Teléfono de Contacto"></li>
-                        <li><span class="inicio"><i class="fa-solid fa-envelope"></i></span><input id="loginEmail" type="email" required class="text" placeholder="Correo Electronico"></li>
+                        <li><span class="inicio"><i class="fa-solid fa-envelope"></i></span><input id="loginEmail" type="email" required class="text" placeholder="Correo Electrónico"></li>
                         <li><span class="inicio"><i class="fa-solid fa-key"></i></span><input id="loginPassword" type="password" required class="text" placeholder="Contraseña"></li>
-                        <li><button type="submit" class="boton"><a href="vendedor/index.html"></a>Crear cuenta</button></li>
+                        <li><button type="submit" class="boton">Crear cuenta</button></li>
                     </ul>
-                </form>
+                </form>                
             </div>
         </div>
     </div>
 </body>
-
+<script src="../js/registrovendedores.js" type="module" defer></script>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
 </footer>
