--- a/LogIn.html
+++ b/LogIn.html
@@ -21,8 +21,8 @@
                 <form id="loginForm" method="post">
                     <ul>
                         <li>
-                            <span class="inicio"><i class="fa-solid fa-user"></i></span><input 
-                            type="text" required class="text" placeholder="Correo electrónico">
+                            <span class="inicio"><i class="fa-solid fa-user"></i></span>
+                            <input id="correo" type="text" required class="text" placeholder="Correo electrónico">
                         </li>
                         <li>
                             <span class="inicio"><i class="fa-solid fa-key"></i></span>
@@ -38,4 +38,5 @@
     </div>
 </body>
 <script type="module" src="js/admin.js"></script>
+<script type="module" src="js/registrovendedores.js"></script>
 </html>
