--- a/loginVendedor.html
+++ b/loginVendedor.html
@@ -21,8 +21,8 @@
                 <form id="loginForm" method="post">
                     <ul>
                         <li>
-                            <span class="inicio"><i class="fa-solid fa-user"></i></span><input 
-                            type="text" required class="text" placeholder="Correo electrónico">
+                            <span class="inicio"><i class="fa-solid fa-user"></i></span>
+                            <input id="correo" type="text" required class="text" placeholder="Correo electrónico">
                         </li>
                         <li>
                             <span class="inicio"><i class="fa-solid fa-key"></i></span>
@@ -32,10 +32,10 @@
                             <button type="submit" class="boton">Iniciar sesión</button>
                         </li>
                     </ul>
-                </form>                
+                </form>               
             </div>
         </div>
     </div>
 </body>
-<script type="module" src="js/admin.js"></script>
+<script type="module" src="js/registrovendedores.js"></script>
 </html>
