--- a/pages-products/things/BioInnova2.html
+++ b/pages-products/things/BioInnova2.html
@@ -41,7 +41,7 @@
                     <h3 id="precio">$90</h3>
                     <h4>65% off | Antes $138.50</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                    <button id="comprar"id="comprarBtn">Comprar</button>
+                    <button class="comprar"id="comprarBtn">Comprar</button>
                 </div>
             </article>
             <article>
