--- a/pages-products/things/SuperClean.html
+++ b/pages-products/things/SuperClean.html
@@ -37,12 +37,11 @@
                         Aprovecha nuestra increíble promoción y lleva a cabo una limpieza y desodorización completa de tu sala, más el aspirado y vaporizado de tu juego de comedor de 4 sillas. 
                     </p>
                 </div>
-                </div>
                 <div class="price">
                     <h3 id="precio">$35</h3>
                     <h4>42% off | Antes $60</h4>
                     <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                    <button id="comprar"id="comprarBtn">Comprar</button>
+                    <button class="comprar" id="comprarBtn">Comprar</button>
                 </div>
             </article>
             <article>
