--- a/admin/crearCuentaVendedor.html
+++ b/admin/crearCuentaVendedor.html
@@ -32,6 +32,7 @@
             <div class="logIn">
                 <form id="registerForm">
                     <ul>
+                        <li><span class="inicio"><i class="fa-solid fa-image"></i></span><input id="storeImg" type="text" required class="text" placeholder="Logo de la Tienda"></li>
                         <li><span class="inicio"><i class="fa-solid fa-user"></i></span><input id="storeName" type="text" required class="text" placeholder="Nombre de la Tienda"></li>
                         <li><span class="inicio"><i class="fa-solid fa-house"></i></span><input id="loginDireccion" type="text" required class="text" placeholder="Dirección"></li>
                         <li><span class="inicio"><i class="fa-solid fa-phone"></i></span><input id="loginTelefono" type="number" required class="text" placeholder="Teléfono de Contacto"></li>
