--- a/vendedor/pages/perfilVendedor.html
+++ b/vendedor/pages/perfilVendedor.html
@@ -30,6 +30,7 @@
         <div class="logIn">
             <form id="loginForm">
                 <ul>
+                    <li><span class="inicio"><i class="fa-solid fa-image"></i></span><input id="storeImg" type="text" required class="text" placeholder="Logo de la Tienda"></li>
                     <li><span class="inicio"><i class="fa-solid fa-user"></i></span><input id="loginEmail" type="text" required class="text" placeholder="Nombre de la Tienda"></li>
                     <li><span class="inicio"><i class="fa-solid fa-house"></i></span><input id="loginDireccion" type="text" required class="text" placeholder="Dirección"></li>
                     <li><span class="inicio"><i class="fa-solid fa-phone"></i></span><input id="loginTelefono" type="number" required class="text" placeholder="Teléfono de Contacto"></li>
